# HACKSKILL

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.js  catalyst_app.py  demo-data.json  docker-compose.prod.yml  index.html  pyproject.toml  requirements.txt
database/: neo4j_schema.cypher  schema.sql
deploy/zoho-catalyst/: README.md  app-config.managed.example.json
monitoring/: prometheus.yml
scripts/: build_catalyst_appsail.py  criminal_network_analysis_dashboard.py  ksp_fir_corpus.py  record_demo_video.js
src/secure_crime_api/: __init__.py  __main__.py  analytics.py  app.py  audit.py  catalyst_entry.py  config.py  crime_data_import.py  crime_ml.py  demo_data.py  intent_taxonomy.py  kannada_lexicon.py  models.py  nlp_intelligence.py  pdf_export.py  platform_modules.py  rate_limit.py  rbac.py  redaction.py  security.py  storage.py  strict_search.py
src/secure_crime_api/resources/kannada/: SOURCE.txt
src/secure_crime_api/static/: app.js  index.html  styles.css
static/: app.js
tests/: test_catalyst_demo.py  test_security.py
