[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-crime-api"
version = "0.1.0"
description = "Secure backend foundation for a crime intelligence platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "PyJWT>=2.8,<3.0",
  "argon2-cffi>=23.1,<26.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "cryptography>=42,<47",
  "networkx>=3.3,<4.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "plotly>=5.24,<7.0",
  "kaleido>=0.2.1,<1.0",
  "matplotlib>=3.8,<4.0",
  "pypdf>=5.0,<7.0",
  "PyMuPDF>=1.24,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
